update api get film by id
