# docs/swagger.json
@@ -83,6 +83,34 @@
                 }
             }
         },
+        "/api/v1/film/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Film service"
+                ],
+                "summary": "GetFilmById",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/v1/films": {
             "get": {
                 "consumes": [
